[package]
name = "turnip"
version = "0.1.0"
edition = "2021"
authors = ["Adam Erickson <adam.michael.erickson@gmail.com>"]
rust-version = "1.56.0"
description = "Ternary operators for Rust"
documentation = ""
readme = "README.md"
homepage = ""
repository = "https://github.com/admercs/turnip-rs"
license = "MIT License"
license-file = "LICENSE"
keywords = ["ternary", "operators", "utilities", "library"]
categories = ["algorithms", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
