[package]
name = "turnip"
version = "1.0.1"
edition = "2021"
authors = ["Adam Erickson <adam.michael.erickson@gmail.com>"]
rust-version = "1.56.0"
description = "Ternary operators for Rust"
documentation = "https://github.com/admercs/turnip-rs"
readme = "README.md"
homepage = "https://github.com/admercs/turnip-rs"
repository = "https://github.com/admercs/turnip-rs"
license = "MIT"
keywords = ["ternary", "operators", "utilities", "library"]
categories = ["algorithms", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
